# slashcloud-starter

./: .gitignore  Cargo.toml  publish.sh  wrangler.toml
.github/workflows/: wrangler.yml
commands/: ping
examples/: gen_command.rs
src/: lib.rs  main.rs
